compiler/plc_cfc/src/tests/snapshots/plc_cfc__tests__xml__simple.snap
---
source: compiler/plc_cfc/src/tests/xml.rs
expression: "crate::deserializer::visit(SIMPLE)"
---
Ok(
    Pou {
        name: "function_1",
        pou_type: Function,
        body: Body {
            function_block_diagram: FunctionBlockDiagram {
                blocks: [
                    Block {
                        local_id: 1,
                        global_id: None,
                        type_name: "ADD",
                        instance_name: None,
                        execution_order_id: Some(
                            1,
                        ),
                        variables: [
                            BlockVariable {
                                kind: Input,
                                formal_parameter: "",
                                negated: false,
                                ref_local_id: Some(
                                    2,
                                ),
                                edge: None,
                                storage: None,
                                enable: None,
                            },
                            BlockVariable {
                                kind: Input,
                                formal_parameter: "",
                                negated: false,
                                ref_local_id: Some(
                                    3,
                                ),
                                edge: None,
                                storage: None,
                                enable: None,
                            },
                            BlockVariable {
                                kind: Output,
                                formal_parameter: "",
                                negated: false,
                                ref_local_id: None,
                                edge: None,
                                storage: None,
                                enable: None,
                            },
                        ],
                    },
                ],
                variables: [
                    FunctionBlockVariable {
                        kind: Input,
                        local_id: 2,
                        negated: false,
                        expression: "elem",
                        execution_order_id: None,
                        ref_local_id: None,
                    },
                    FunctionBlockVariable {
                        kind: Input,
                        local_id: 3,
                        negated: false,
                        expression: "1",
                        execution_order_id: None,
                        ref_local_id: None,
                    },
                    FunctionBlockVariable {
                        kind: Output,
                        local_id: 7,
                        negated: false,
                        expression: "elem",
                        execution_order_id: Some(
                            2,
                        ),
                        ref_local_id: None,
                    },
                ],
                controls: [],
                connectors: [],
            },
            global_id: None,
        },
    },
)
